[package]
name = "gemini-web-image"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4"] }
wreq = { version = "5.3.0", features = ["cookies"] }
wreq-util = "2.2.6"
