[package]
name = "gemini-web-image"
version = "0.1.1"
edition = "2024"
description = "Command-line image generation through the web Gemini app via cookie replay (no official API)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ZmoleCristian/gemini-web-image"
authors = ["zmole.cristian <tragdate@gmail.com>"]
keywords = ["gemini", "image", "ai", "google", "cli"]
categories = ["command-line-utilities", "api-bindings"]
exclude = ["law.toml"]

[dependencies]
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4"] }
wreq = { version = "5.3.0", features = ["cookies"] }
wreq-util = "2.2.6"
